--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 #vPlayer-container { 
-	width: 705px;
+	width: 100%;
     height: 284px;
 	position: relative;
 	display:inline-block;
@@ -7,13 +7,13 @@
 }
  
 .videoPlayer {
-	width: 500px;
+	width: 84.5%;
     height: 284px;
-	position:absolute;
+    background-color: black;
 }
 
 #playerList {
-	min-height: 281px;
+	min-height: 284px;
 	overflow-y: overlay; 
 	float:right;
 	clear : both;
@@ -45,7 +45,7 @@
 #controls {
 	top: 265px;
     position: absolute;
-	min-width: 460px;
+	width: 81.6%;
     height: 45px;
     background: rgba(0,0,0,0.5);
 	transition: 0.7s;
@@ -94,20 +94,19 @@
     background: url('../images/icons.png') -65px 0;
 }
 #controls5{
-	left: 440px;
+	left: 95%;
 	width: 50px;
     background: url('../images/zoominout.png') -80px -32px;
 }
 #controls6{
-	left: 440px;
+	left: 95%;
 	width: 45px;
 	display : none;
     background: url('../images/zoominout.png') -35px 4px;
 }
 .zoomIn {
-	width: 1024px !important;
-	height: 820px !important;
-	max-height: 820px !important;
+	width: 100vw !important;
+	height: 100vh !important;
 }
 .hide {
 	display : none !important;
@@ -116,11 +115,12 @@
 	display: block !important;
 }
 .progressBar {
+	cursor: pointer;
 	border: 0px;
 	vertical-align: -0.2em;
 	margin-top: 23px !important;
 	margin-left: 100px !important;
-    min-width: 60%;
+    width: 82%;
     height: 5px !important;
     border-radius: 3px;
 	transition: width 5s ease-in-out;
@@ -131,4 +131,8 @@ progress::-webkit-progress-value {
 }
 progress::-moz-progress-bar {
   background:#2e52a4;
+}
+
+.zoomIn > ul {
+	width: 95vw !important;
 }
